# directory-intelligence-tool

./: .gitignore  CLAUDE.md  LICENSE  README.md  dit.py  profile.example.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
commands/: extract.py  find.py  init_cmd.py  profiles_cmd.py  strategize.py
core/: claude_client.py  profile.py  verify.py  workspace.py
skills/: api_scraper.py  common.py  custom_scraper.py  firecrawl_scraper.py  html_scraper.py  js_scraper.py  pdf_scraper.py  verify.py
